# crewAI

./: app.py  main.py  pyproject.toml  stock_picker.py
output/: stock_recommendations.md
