[project]
name = "crewai-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "crewai>=1.9.3",
    "duckduckgo-search>=8.1.1",
    "litellm>=1.75.3",
    "onnxruntime<1.24",
    "streamlit>=1.54.0",
    "yfinance>=1.2.0",
]
